--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 <section id="Contact">
     <!-- heading -->
     <div class="contact">
-        <h2>Contact</h2>
+        <h2>Contacts</h2>
         <span>My Contacts</span>
     </div>
     <br>
